force-app/main/default/objects/Debit_Credit_note_Details__c/Debit_Credit_note_Details__c.object-meta.xml
<CustomObject>
    <label>Debit/Credit note Details</label>
    <nameField>
        <displayFormat>DC-{0000}</displayFormat>
        <label>Debit/Credit-NO</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debit/Credit note Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>