force-app/main/default/objects/Debit_Credit_note_Details__c/fields/Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note__c</fullName>
    <formula>HMC_CrNoteNm__c != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Note</label>
    <type>Checkbox</type>
</CustomField>