force-app/main/default/objects/Debit_Credit_note_Details__c/fields/Credit_Note_Link__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Link__c</fullName>
    <formula>IF((ISBLANK(HMC_CrNoteNm__c) || ISNULL(HMC_CrNoteNm__c)),&apos;&apos;,HYPERLINK(&quot;/apex/AXDMS_InvoiceDocView?docId=&quot;&amp;HMC_CrNoteNm__c,&quot;Open Document&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Note Link</label>
    <type>Text</type>
</CustomField>