force-app/main/default/objects/Debit_Credit_note_Details__c/fields/Debit_Note__c.field-meta.xml
<CustomField>
    <fullName>Debit_Note__c</fullName>
    <formula>HMC_DbNoteNm__c != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debit Note</label>
    <type>Checkbox</type>
</CustomField>