force-app/main/default/objects/Debit_Credit_note_Details__c/fields/HMC_CrNoteNm__c.field-meta.xml
<CustomField>
    <fullName>HMC_CrNoteNm__c</fullName>
    <label>CrNoteNm</label>
    <length>150</length>
    <type>Text</type>
</CustomField>