force-app/main/default/objects/Debit_Credit_note_Details__c/fields/HMC_DbNoteNm__c.field-meta.xml
<CustomField>
    <fullName>HMC_DbNoteNm__c</fullName>
    <label>DbNoteNm</label>
    <length>150</length>
    <type>Text</type>
</CustomField>