force-app/main/default/objects/Debit_Credit_note_Details__c/fields/HMC_Dealer__c.field-meta.xml
<CustomField>
    <fullName>HMC_Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Debit/Credit note Details</relationshipLabel>
    <relationshipName>Debit_Credit_note_Details</relationshipName>
    <type>Lookup</type>
</CustomField>