force-app/main/default/objects/Debit_Credit_note_Details__c/fields/HMC_DealerCode__c.field-meta.xml
<CustomField>
    <fullName>HMC_DealerCode__c</fullName>
    <label>DealerCode</label>
    <length>150</length>
    <type>Text</type>
</CustomField>