force-app/main/default/objects/Debit_Credit_note_Details__c/fields/HMC_Debit_Note_Link__c.field-meta.xml
<CustomField>
    <fullName>HMC_Debit_Note_Link__c</fullName>
    <formula>IF((ISBLANK(HMC_DbNoteNm__c) || ISNULL(HMC_DbNoteNm__c)),&apos;&apos;,HYPERLINK(&quot;/apex/AXDMS_InvoiceDocView?docId=&quot;&amp;HMC_DbNoteNm__c,&quot;Open Document&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debit Note Link</label>
    <type>Text</type>
</CustomField>