force-app/main/default/objects/Debit_Credit_note_Details__c/fields/HMC_Order__c.field-meta.xml
<CustomField>
    <fullName>HMC_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Credit note Details</relationshipLabel>
    <relationshipName>Debit_Credit_note_Details</relationshipName>
    <type>Lookup</type>
</CustomField>