force-app/main/default/objects/Debit_Credit_note_Details__c/fields/HMC_OrderCode__c.field-meta.xml
<CustomField>
    <fullName>HMC_OrderCode__c</fullName>
    <label>OrderCode</label>
    <length>150</length>
    <type>Text</type>
</CustomField>